include_HEADERS = \
	libvsapm.h

pkginclude_HEADERS = \
	libvsapm/codepage.h \
	libvsapm/definitions.h \
	libvsapm/error.h \
	libvsapm/extern.h \
	libvsapm/features.h \
	libvsapm/types.h

EXTRA_DIST = \
	libvsapm.h.in \
	libvsapm/definitions.h.in \
	libvsapm/features.h.in \
	libvsapm/types.h.in

DISTCLEANFILES = \
	libvsapm.h \
	libvsapm/definitions.h \
	libvsapm/features.h \
	libvsapm/types.h \
	Makefile \
	Makefile.in

