MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libuna/libuna.vcproj \
	libvsapm/libvsapm.vcproj \
	pyvsapm/pyvsapm.vcproj \
	vsapm_test_error/vsapm_test_error.vcproj \
	vsapm_test_io_handle/vsapm_test_io_handle.vcproj \
	vsapm_test_notify/vsapm_test_notify.vcproj \
	vsapm_test_partition/vsapm_test_partition.vcproj \
	vsapm_test_partition_map_entry/vsapm_test_partition_map_entry.vcproj \
	vsapm_test_sector_data/vsapm_test_sector_data.vcproj \
	vsapm_test_support/vsapm_test_support.vcproj \
	vsapm_test_tools_info_handle/vsapm_test_tools_info_handle.vcproj \
	vsapm_test_tools_output/vsapm_test_tools_output.vcproj \
	vsapm_test_tools_signal/vsapm_test_tools_signal.vcproj \
	vsapm_test_volume/vsapm_test_volume.vcproj \
	vsapminfo/vsapminfo.vcproj \
	libvsapm.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

